@@ -1,7 +1,8 @@
 var path = require("path"),
     fs = require("fs"),
     mime = require("mime"),
-    strata = require("./index");
+    strata = require("./index"),
+    utils = strata.utils;
 
 /**
  * A middleware for serving files efficiently from the given `root` directory
@@ -36,69 +37,76 @@ module.exports = function (app, root, index) {
             return;
         }
 
-        var pathInfo = unescape(env.pathInfo),
-            fullPath = path.join(root, pathInfo);
+        var pathInfo = unescape(env.pathInfo);
+
+        if (pathInfo.indexOf("..") != -1) {
+            utils.forbidden(env, callback);
+            return;
+        }
+
+        var fullPath = path.join(root, pathInfo);
 
         path.exists(fullPath, function (exists) {
-            if (exists) {
-                fs.stat(fullPath, function (err, stats) {
-                    if (err && strata.handleError(err, env, callback)) {
-                        return;
-                    }
-
-                    if (stats.isFile()) {
-                        sendFile(callback, fullPath, stats);
-                    } else if (stats.isDirectory() && index) {
-                        // If the request targets a directory check all index
-                        // files to see if we can serve any of them.
-                        var indexExists = {};
-
-                        function sendFirstExisting() {
-                            var found = false,
-                                indexPath;
-
-                            for (var i = 0, len = index.length; !found && i < len; ++i) {
-                                indexPath = path.join(fullPath, index[i]);
-
-                                if (indexExists[indexPath]) {
-                                    fs.stat(indexPath, function (err, stats) {
-                                        if (err && strata.handleError(err, env, callback)) {
-                                            return;
-                                        }
-
-                                        sendFile(callback, indexPath, stats);
-                                    });
-
-                                    found = true;
-                                }
-                            }
-
-                            if (!found) {
-                                app(env, callback);
-                            }
-                        }
-
-                        var checked = 0;
-
-                        for (var i = 0, len = index.length; i < len; ++i) {
-                            (function (indexPath) {
-                                path.exists(indexPath, function (exists) {
-                                    indexExists[indexPath] = exists;
-                                    checked += 1;
-
-                                    if (checked == len) {
-                                        sendFirstExisting();
-                                    }
-                                });
-                            })(path.join(fullPath, index[i]));
-                        }
-                    } else {
-                        app(env, callback);
-                    }
-                });
-            } else {
+            if (!exists) {
                 app(env, callback);
+                return;
             }
+
+            fs.stat(fullPath, function (err, stats) {
+                if (err && strata.handleError(err, env, callback)) {
+                    return;
+                }
+
+                if (stats.isFile()) {
+                    sendFile(callback, fullPath, stats);
+                } else if (stats.isDirectory() && index) {
+                    // If the request targets a directory check all index
+                    // files to see if we can serve any of them.
+                    var indexExists = {};
+
+                    function sendFirstExisting() {
+                        var found = false,
+                            indexPath;
+
+                        for (var i = 0, len = index.length; !found && i < len; ++i) {
+                            indexPath = path.join(fullPath, index[i]);
+
+                            if (indexExists[indexPath]) {
+                                fs.stat(indexPath, function (err, stats) {
+                                    if (err && strata.handleError(err, env, callback)) {
+                                        return;
+                                    }
+
+                                    sendFile(callback, indexPath, stats);
+                                });
+
+                                found = true;
+                            }
+                        }
+
+                        if (!found) {
+                            app(env, callback);
+                        }
+                    }
+
+                    var checked = 0;
+
+                    for (var i = 0, len = index.length; i < len; ++i) {
+                        (function (indexPath) {
+                            path.exists(indexPath, function (exists) {
+                                indexExists[indexPath] = exists;
+                                checked += 1;
+
+                                if (checked == len) {
+                                    sendFirstExisting();
+                                }
+                            });
+                        })(path.join(fullPath, index[i]));
+                    }
+                } else {
+                    app(env, callback);
+                }
+            });
         });
     }
 }
