@@ -14,6 +14,7 @@ exports.compareLength = compareLength;
 exports.sortByLength = sortByLength;
 exports.badRequest = badRequest;
 exports.unauthorized = unauthorized;
+exports.forbidden = forbidden;
 exports.notFound = notFound;
 exports.empty = empty;
 
@@ -199,6 +200,18 @@ function unauthorized(env, callback, realm) {
         "Content-Type": "text/plain",
         "Content-Length": Buffer.byteLength(content).toString(),
         "WWW-Authenticate": 'Basic realm="' + realm + '"'
+    }, content);
+}
+
+/**
+ * A helper for returning a 403 Forbidden response.
+ */
+function forbidden(env, callback) {
+    var content = "Forbidden";
+
+    callback(403, {
+        "Content-Type": "text/plain",
+        "Content-Length": Buffer.byteLength(content).toString()
     }, content);
 }
 
