@@ -8,6 +8,8 @@
 
   * Only use static middleware on GET requests.
 
+  * Static middleware returns 403 Forbidden when paths contain "..".
+
 = 0.8.2 / 2011-11-21
 
   * Added strata.call to catch errors that are thrown synchronously by strata
